# crewai-auto-timesheet-agent

./: .gitignore  README.md  compose.yml  pydantic_exerc.ipynb  pyproject.toml  report.md  requirements.txt  run_main.py  timesheet_Nhlanhla Baloyi_2026-06-22.json
agents/: crew_manager.py  run_main.py
agents/config/: agents.yaml  tasks.yaml
api/: database.py  models.py  routers.py
app/: database.py  models.py  routers.py
src/crewai_timesheet_agent/: crew.py  main.py
src/crewai_timesheet_agent/config/: agents.yaml  tasks.yaml
