[project]
name = "crewai_timesheet_agent"
version = "0.1.0"
description = "crewai-timesheet-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.7"
]

[project.scripts]
crewai_timesheet_agent = "crewai_timesheet_agent.main:run"
run_crew = "crewai_timesheet_agent.main:run"
train = "crewai_timesheet_agent.main:train"
replay = "crewai_timesheet_agent.main:replay"
test = "crewai_timesheet_agent.main:test"
run_with_trigger = "crewai_timesheet_agent.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
