[project]
name = "timesheet_crews"
version = "0.1.0"
description = "crewai-timesheet-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.7",
    "fastapi[standard]>=0.138.0",
    "psycopg>=3.3.4",
    "psycopg-binary>=3.3.4",
    "pydantic[email]>=2.12.5",
    "qdrant-client>=1.18.0",
    "sqlmodel>=0.0.38",
]

[project.scripts]
agents = "agents.run_main:run"
run_crew = "agents.run_main:run"

[tool.crewai]
type = "crew"

[tool.fastapi]         
entrypoint = "run_main:app"
